Uploaded image for project: 'Apache Arrow'
  1. Apache Arrow
  2. ARROW-8030

[C++][Plasma] Fix inconsistent comment style

    XMLWordPrintableJSON

Details

    Description

      The comments in the plasma are a mixture of '@params' and '\params'. The reviewers required me to unify the style when I was trying to add windows support. I think it would be better to address it using a different PR.

      Attachments

        Issue Links

          Activity

            People

              suquark Siyuan Zhuang
              suquark Siyuan Zhuang
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0h
                  0h
                  Logged:
                  Time Spent - 0.5h
                  0.5h