cpp/src/plasma/client.h
@@ -207,7 +207,7 @@ class ARROW_EXPORT PlasmaClient {
   /// object is present, has been sealed and not used by another client. Otherwise,
   /// it is a no operation.
   ///
-  /// @todo We may want to allow the deletion of objects that are not present or
+  /// \todo We may want to allow the deletion of objects that are not present or
   ///       haven't been sealed.
   ///
   /// \param object_id The ID of the object to delete.
